# curl-rs

./: Cargo.toml  README.md
benches/: http_parser.rs
src/: cli.rs  error.rs  lib.rs  main.rs  request.rs  response.rs  url.rs
src/http/: headers.rs  mod.rs  parser.rs
src/net/: mod.rs  tcp.rs  tls.rs
