[package]
name = "curl-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
tokio = { version = "1", features = ["net", "io-util", "time", "rt", "rt-multi-thread", "macros"] }
bytes = "1.5"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[features]
default = []
json = ["dep:serde", "dep:serde_json"]

[dev-dependencies]
clap = { version = "4.4", features = ["derive"] }
criterion = "0.5"

[[bin]]
name = "curl-rs"
path = "src/main.rs"

[[bench]]
name = "http_parser"
harness = false